# rclpy-from-zero-to-hero

./: .gitattributes  Readme.md
ros2_src/ch1/: package.xml  setup.py
ros2_src/ch1/ch1/: first_node.py  first_publisher.py  first_subscriber.py  pub-sub.launch.py  simple_publisher.py  simple_subscriber.py
ros2_src/ch1/launch/: first_node.launch.py  first_pub_sub.launch.py
ros2_src/ch2/: package.xml  setup.py
ros2_src/ch2/ch2/: async.py  concurrent.py  long_running_operation.py  manual_spin.py  mutually_exclusive.py  qos_publisher.py  qos_publisher1.py  qos_subscriber.py  qos_subscriber1.py  qos_subscriber2.py
ros2_src/ch2/launch/: qos.launch.py
ros2_src/ch3/: package.xml  setup.py
ros2_src/ch3/ch3/: closed_loop_p.py  closed_loop_p_square.py  closed_loop_pid.py  go_to.py  open_loop.py  open_loop_square.py
ros2_src/ch3/launch/: simulation.launch.py  square.launch.py
ros2_src/ch4/: package.xml  setup.cfg  setup.py
ros2_src/ch4/ch4/: ekf.py  ekf2.py  kf.py  kf2.py  odometry_comparison.py
ros2_src/ch4/launch/: ekf.launch.py  ekf2.launch.py  kf.launch.py  kf2.launch.py
ros2_src/ch5/: package.xml  setup.cfg  setup.py
ros2_src/ch5/ch5/: drone_mission_node.py  drone_mission_node_server.py  holonomic_closed_loop_square_action_client.py  holonomic_closed_loop_square_action_server.py  holonomic_closed_loop_square_service_client.py  holonomic_closed_loop_square_service_server.py
ros2_src/ch5/launch/: drone_mission.launch.py  simulation.launch.py
ros2_src/ch5_interfaces/: CMakeLists.txt  package.xml
ros2_src/ch5_interfaces/action/: DriveCircle.action  DriveSquareAction.action
ros2_src/ch5_interfaces/srv/: DriveInSquare.srv  Takeoff.srv
ros2_src/ch6/: package.xml  setup.cfg  setup.py
ros2_src/ch6/ch6/: drone_lifecycle.py  drone_lifecycle2.py
ros2_src/ch6/launch/: simulation.launch.py
ros2_src/hw1_pkg/: Homework_1.md  package.xml  setup.py
ros2_src/hw2_pkg/: Homework_2.md  config.rviz  package.xml  setup.cfg  setup.py
ros2_src/hw3_pkg/: Homework_3.md  package.xml  setup.cfg  setup.py
ros2_src/hw4_pkg/: package.xml  setup.cfg  setup.py
ros2_src/preface/: package.xml  params.yaml  setup.py
ros2_src/preface/bagfiles/car_demo/: metadata.yaml
ros2_src/preface/launch/: namespace.launch.py  params.launch.py  rviz.launch.py
ros2_src/preface/preface/: namespace_example1.py  namespace_example2.py  params.py
ros2_src/preface/rviz/: config.rviz
ros2_src/preface/scripts/: first_script.sh
ros2_src/preface/scripts/ch2/: .drone_rc  move.sh  takeoff_land.sh  waypoints.sh
ros2_src/project/: colcon.pkg  package.xml  setup.py
ros2_src/utils/: package.xml  setup.py
(+81 files in other folders)
