<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ch5</name>
  <version>0.0.0</version>
  <description>Fith ROS 2 ament-python package of the RCLPY: From Zero to Hero Book</description>
  <maintainer email="office@roboticscontentlab.com">Georg Novotny</maintainer>
  <license>Apache-2.0</license>


  <depend>rclpy</depend>
  <depend>ch5_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
